--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bootstrap": "^5.3.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-handlebars": "^7.0.7",
 		"pg": "^8.11.0"
 	},
 	"devDependencies": {
